--- a/templates/result-template.html
+++ b/templates/result-template.html
@@ -3,7 +3,7 @@
     <atomic-result-fields-list>
         <div class="w-full max-w-sm bg-white flex">
             <a :href="path" class="flex align-center justify-center w-32 mr-2">
-                <atomic-result-image class="max-w-1/4" field="ec_image" fallback="/assets/image.svg" image-size=small>
+                <atomic-result-image class="max-w-1/4" field="ec_images" fallback="/assets/image.svg" image-size=small>
                 </atomic-result-image>
             </a>
             <div class="px-5 pb-5 flex flex-col h-full">
@@ -26,7 +26,7 @@
             <div class="flex items-center flex flex-col h-full ml-auto">
                 <div class="rounded-lg bg-gray-100 flex py-2 px-3 mx-2">
                     <span class="mr-1 mt-1">$</span>
-                    <span class="font-bold text-2xl">25</span>
+                    <result-text-field field="ec_price"></result-text-field>
                     <span class="px1 flex items-end">each</span>
                 </div>
                 <button class="add-to-cart">Add to cart</button>
